# epidemic-simulation

./: .buildinfo  README.md  genindex.html  index.html  modules.html  objects.inv  old-pyproject.toml  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml  deploy-documentation.yml
_sources/: index.rst  modules.rst
_sources/demo-notebooks/: galton-watson.ipynb
_sources/maths/: yaglom-theorem.md
_sources/notebooks/: galton-watson.ipynb  theoreme-yaglom.ipynb
data/: distributions.csv
data/results/: ks-evolution.csv  lambda-evolution.csv  p-value-evolution.csv  p-value-evolutions.csv
demo-notebooks/: galton-watson.html
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/demo-notebooks/: galton-watson.ipynb
docs/source/maths/: yaglom-theorem.md
docstring/: modules.html
maths/: yaglom-theorem.html
notebooks/: galton-watson.html  loi-reproduction.html  theoreme-yaglom.html
src/code/models/: galton_watson.py
src/code/plot/: plot_tree.py
src/code/simulation/: galton_watson.py  galton_watson_wrapper.py  probability_distributions.py  utils.py  yaglom.py
src/notebooks/: galton-watson-junk.ipynb  galton-watson.ipynb  loi-reproduction.ipynb  theoreme-yaglom.ipynb
src/utils/: utils.py
