[project]
name = "epidemic-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
