[project]
name = "epidemic-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "myst-nb>=1.3.0",
    "myst-parser>=5.0.0",
    "nb-clean>=4.0.1",
    "nbdev>=3.0.10",
    "nbqa>=1.9.1",
    "papermill>=2.6.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "sphinx>=9.1.0",
    "sphinx-book-theme>=1.1.4",
    "sphinx-rtd-theme>=3.1.0",
]
